Bug #5956
closedorientate is not a word
100%
Description
There are a few occurrences of "orientate" or "orientated" in our code base (comments mostly). In American English, the verb is "orient", and its past participle is "oriented". (Apparently the backformed "orientate" is sometimes acceptable in British English, although orient is still the preferred form. In America, we associate the use of "orientated" with poor grammar/English skills.)
We should switch to the standard American English "orient" and "oriented", which doesn't carry any such negative associations.
Updated by Igor Pashev about 7 years ago
I love illumos for lessons of English :-)
Updated by Sergio Aguayo almost 7 years ago
- Status changed from New to In Progress
- Assignee set to Sergio Aguayo
Updated by Graham Stephens almost 7 years ago
I'm not sure that it "is not a word" as you put it. That's what I was taught in school, and have used for the past 50 or so years. It has been in use in Britain for over 200 years; it's only now with the prevalence of American TV shows that the balance may be swinging toward "orient".
The same applies to the misuse of "headed" (as in "where are we headed?") that you Americans seem so fond of.
Updated by Sergio Aguayo almost 7 years ago
- Status changed from In Progress to Pending RTI
Updated by Electric Monk almost 7 years ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 81ad62fccc616122995dc5abd6e7a8bed377f818
commit 81ad62fccc616122995dc5abd6e7a8bed377f818 Author: Sergio Aguayo <sergioag@qmailhosting.net> Date: 2015-06-06T00:33:04.000Z 5956 orientate is not a word Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Gordon Ross <gwr@nexenta.com>