5956 orientate is not a word Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Marcel Telka <marcel@telka.sk> Approved by: Gordon Ross <gwr@nexenta.com>